--- a/templates/kafka.template
+++ b/templates/kafka.template
@@ -7,9 +7,9 @@
   environment:
     KAFKA_BROKER_ID: {{broker-id}}
     KAFKA_ZOOKEEPER_CONNECT: {{zookeeper-ports}}
-    KAFKA_LISTENERS: INTERNAL://{{broker-port-internal}}, PLAINTEXT://{{broker-port-external}}
-    KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-    KAFKA_ADVERTISED_LISTENERS: INTERNAL://{{broker-advertised-port-internal}}, PLAINTEXT://{{broker-advertised-port-external}}
+    KAFKA_LISTENERS: INTERNAL://{{broker-port-internal}}, EXTERNAL://{{broker-port-external}}
+    KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:{{broker-internal-protocol}},EXTERNAL:{{broker-external-protocol}}
+    KAFKA_ADVERTISED_LISTENERS: INTERNAL://{{broker-advertised-port-internal}}, EXTERNAL://{{broker-advertised-port-external}}
     KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
     KAFKA_JMX_PORT: {{broker-jmx-port}}
     KAFKA_JMX_HOSTNAME: {{broker-name}}
