--- a/templates/prometheus.yml.template
+++ b/templates/prometheus.yml.template
@@ -17,4 +17,13 @@ scrape_configs:
 
     static_configs:
       - targets:
-          {{broker-ports}}
+          {{jmx-broker-ports}}
+
+  - job_name: 'zookeeper'
+
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 5s
+
+    static_configs:
+      - targets:
+          {{jmx-zookeeper-ports}}
