--- a/templates/zookeeper.template
+++ b/templates/zookeeper.template
@@ -9,3 +9,7 @@
     ZOOKEEPER_SERVERS: {{zookeeper-internal-ports}}
     KAFKA_JMX_PORT: {{zookeeper-jmx-port}}
     KAFKA_JMX_HOSTNAME: localhost
+    KAFKA_OPTS: "-javaagent:/tmp/jmx_prometheus_javaagent-0.12.1.jar=8080:/tmp/zookeeper_config.yml"
+  volumes:
+      - $PWD/jmx_prometheus_javaagent-0.12.1.jar:/tmp/jmx_prometheus_javaagent-0.12.1.jar
+      - $PWD/zookeeper_config.yml:/tmp/zookeeper_config.yml
