--- a/templates/schema-registry.template
+++ b/templates/schema-registry.template
@@ -5,7 +5,7 @@
   depends_on:
     {{broker-containers}}
   ports:
-    - "{{schema-registry-port}}:8081"
+    - "{{schema-registry-port}}:{{schema-registry-port}}"
   environment:
     SCHEMA_REGISTRY_HOST_NAME: {{schema-registry-name}}
     SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: {{kafka-bootstrap-servers}}
