Configurable release for docker images
Defaults to 5.3.0 at the moment, default can be set as a constant
at the top of kafka_docker_composer.py

--- a/templates/kafka.template
+++ b/templates/kafka.template
@@ -1,5 +1,5 @@
 {{broker-name}}:
-  image: confluentinc/cp-kafka:latest
+  image: confluentinc/cp-kafka:{{release}}
   hostname: {{broker-name}}
   container_name: {{broker-name}}
   depends_on:
