Placed all mapped files into separate "volumes" directory
This should make it easier to copy all required files to
create a working environment.

--- a/cluster-example.properties
+++ b/cluster-example.properties
@@ -1,6 +1,9 @@
-brokers=2
+brokers=4
 zookeepers=6
 racks=2
 zookeeper_groups=2
-broker_template=templates/kafka-with-rack.template
+broker_template=templates/kafka.template
 zookeeper_template=templates/zookeeper-with-group.template
+release=5.1.2
+prometheus=true
+
