--- a/templates/prometheus.template
+++ b/templates/prometheus.template
@@ -4,7 +4,7 @@ prometheus:
   depends_on:
     {{broker-containers}}
   volumes:
-    - $PWD/prometheus.yml:/etc/prometheus/prometheus.yml
+    - $PWD/volumes/prometheus.yml:/etc/prometheus/prometheus.yml
   ports:
     - 9090:9090
 
@@ -14,6 +14,6 @@ grafana:
   depends_on:
     - prometheus
   volumes:
-    - $PWD/provisioning:/etc/grafana/provisioning
+    - $PWD/volumes/provisioning:/etc/grafana/provisioning
   ports:
     - 3000:3000
