--- a/templates/zookeeper-with-group.template
+++ b/templates/zookeeper-with-group.template
@@ -12,6 +12,6 @@
     ZOOKEEPER_GROUPS: {{zookeeper-groups}}
     KAFKA_OPTS: "-javaagent:/tmp/jmx_prometheus_javaagent-0.12.1.jar=8080:/tmp/zookeeper_config.yml"
   volumes:
-      - $PWD/jmx_prometheus_javaagent-0.12.1.jar:/tmp/jmx_prometheus_javaagent-0.12.1.jar
-      - $PWD/zookeeper_config.yml:/tmp/zookeeper_config.yml
+      - $PWD/volumes/jmx_prometheus_javaagent-0.12.1.jar:/tmp/jmx_prometheus_javaagent-0.12.1.jar
+      - $PWD/volumes/zookeeper_config.yml:/tmp/zookeeper_config.yml
 
