Create dependency between schema-registry containers
This seems to solve the problem of multiple SR containers preventing
each other from starting - possibly because they both try to create
the required topic.

--- a/templates/schema-registry.template
+++ b/templates/schema-registry.template
@@ -4,6 +4,7 @@
   container_name: {{schema-registry-name}}
   depends_on:
     {{broker-containers}}
+    {{previous-schema-registry-containers}}
   ports:
     - "{{schema-registry-port}}:{{schema-registry-port}}"
   environment:
