Correct rack-id assignment
Turns out the problem sits between keyboard and chair, the property (environment variable) is broker.rack, not just rack.

This solves the round-robin assignment of partitions across brokers on different racks - no it is symmetric.

--- a/templates/kafka.template
+++ b/templates/kafka.template
@@ -1,5 +1,5 @@
 {{broker-name}}:
-  image: confluentinc/cp-kafka:{{release}}
+  image: confluentinc/cp-enterprise-kafka:{{release}}
   hostname: {{broker-name}}
   container_name: {{broker-name}}
   depends_on:
@@ -11,10 +11,13 @@
     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:{{broker-internal-protocol}},EXTERNAL:{{broker-external-protocol}}
     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://{{broker-advertised-port-internal}}, EXTERNAL://{{broker-advertised-port-external}}
     KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+    KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
+    CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: {{broker-port-internal}}
+    CONFLUENT_METRICS_REPORTER_ZOOKEEPER_CONNECT: zookeeper1:2181
     KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
     KAFKA_JMX_PORT: {{broker-jmx-port}}
     KAFKA_JMX_HOSTNAME: {{broker-name}}
-    KAFKA_RACK: {{broker-rack}}
+    KAFKA_BROKER_RACK: {{broker-rack}}
     KAFKA_OPTS: "-javaagent:/tmp/jmx_prometheus_javaagent-0.12.1.jar=8080:/tmp/kafka_config.yml"
   ports:
     - {{broker-port}}:{{broker-port}}
