--- a/volumes/kafka_config.yml
+++ b/volumes/kafka_config.yml
@@ -35,19 +35,19 @@ rules:
   type: COUNTER
 
   # Generic per-second OneMinuteRate with 0-2 key/value pairs
-- pattern: kafka.(\w+)<type=(.+), name=(.+)PerSec\w*, (.+)=(.+), (.+)=(.+)><>OneMinuteRate
-  name: kafka_$1_$2_$3_oneminuterate
+- pattern: kafka.(\w+)<type=(.+), name=(.+)PerSec\w*, (.+)=(.+), (.+)=(.+)><>(.+)MinuteRate
+  name: kafka_$1_$2_$3_$8MinuteRate
   type: GAUGE
   labels:
     "$4": "$5"
     "$6": "$7"
-- pattern: kafka.(\w+)<type=(.+), name=(.+)PerSec\w*, (.+)=(.+)><>OneMinuteRate
-  name: kafka_$1_$2_$3_oneminuterate
+- pattern: kafka.(\w+)<type=(.+), name=(.+)PerSec\w*, (.+)=(.+)><>(.+)MinuteRate
+  name: kafka_$1_$2_$3_$6MinuteRate
   type: GAUGE
   labels:
     "$4": "$5"
-- pattern: kafka.(\w+)<type=(.+), name=(.+)PerSec\w*><>OneMinuteRate
-  name: kafka_$1_$2_$3_oneminuterate
+- pattern: kafka.(\w+)<type=(.+), name=(.+)PerSec\w*><>(.+)MinuteRate
+  name: kafka_$1_$2_$3_$4MinuteRate
   type: GAUGE
 
   # Generic per-second Mean with 0-2 key/value pairs
