Grafana dashboards automatic loading
Also:

No metrics reporters
Prometheus exporter moved from 8090 to 8091

--- a/templates/prometheus.template
+++ b/templates/prometheus.template
@@ -15,5 +15,6 @@ grafana:
     - prometheus
   volumes:
     - $PWD/volumes/provisioning:/etc/grafana/provisioning
+    - $PWD/volumes/dashboards:/var/lib/grafana/dashboards
   ports:
     - 3000:3000
