Update postgres docker compose to be more sane

--- a/postgres.yaml
+++ b/postgres.yaml
@@ -1,16 +1,21 @@
 ---
-version: "3.8"
 services:
     postgres:
         image: postgres
         hostname: postgres
         container_name: postgres
         restart: always
+        ports:
+          - 5432:5432
         environment:
           POSTGRES_PASSWORD: adminpass
+          POSTGRES_USER: admin
+          POSTGRES_DB: users
 
     adminer:
         image: adminer
+        hostname: adminer
+        container_name: adminer
         restart: always
         ports:
           - 8080:8080
