--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
-CONFLUENT=7.9.1
-CONFLUENT_DOCKER_TAG=7.9.1
-CONFLUENT_SHORT=7.9
+CONFLUENT=8.0.0
+CONFLUENT_DOCKER_TAG=8.0.0
+CONFLUENT_CONTROL_CENTER_DOCKER_TAG=2.2.0
+CONFLUENT_SHORT=8.0
 CONFLUENT_PREVIOUS=""
-CONFLUENT_RELEASE_TAG_OR_BRANCH=7.9.0-post
-CONFLUENT_MAJOR=7
-CONFLUENT_MINOR=9
-CONFLUENT_PATCH=1
+CONFLUENT_RELEASE_TAG_OR_BRANCH=8.0.0-post
+CONFLUENT_MAJOR=8
+CONFLUENT_MINOR=0
+CONFLUENT_PATCH=0
 #####################################################
 
 CP_VERSION_FULL="$CONFLUENT_MAJOR.$CONFLUENT_MINOR.$CONFLUENT_PATCH"
